--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="main.js"></script>
 </head>
 <body>
-    
+    <h1>Hello wrld</h1>
+    <img src="images/image.jpg" alt="">
 </body>
 </html>
