--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hello wrld</h1>
     <img src="images/image.jpg" alt="">
     <p> Lorem ispum... </p>
+    <a href="www.google.com">To people site</a>
 </body>
 </html>
