--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <img src="images/image.jpg" alt="">
     <p> Lorem ispum... </p>
     <a href="www.google.com">To people site</a>
+    <span>Local text</span>
 </body>
 </html>
